[package]
name = "MIGA"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.55.0", features = ["tokio", "tcp", "dns", "noise", "yamux", "kad", "identify", "ping", "mdns", "macros"] }
futures = "0.3"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
env_logger = "0.11.8"
log = "0.4"
clap = { version = "4.4", features = ["derive"] }
cid = "0.11.1"
axum = "0.8.4"
tower-http = { version = "0.6.4", features = ["fs", "trace"] }
tokio-util = "0.7.10"
