[package]
name = "MIGA"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.55.0", features = ["tokio", "tcp", "dns", "noise", "yamux", "kad", "identify", "ping", "mdns", "macros"] }
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] }
anyhow = "1.0.98"
env_logger = "0.11.8"
log = "0.4.27"
clap = { version = "4.5.39", features = ["derive"] }
cid = "0.11.1"
# No web server dependencies needed for IPFS sharing
